added ViewUtils updated home layout with edittext

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,6 +13,24 @@
         android:minHeight="?attr/actionBarSize"
         app:titleTextColor="@android:color/white" />
 
+    <EditText
+        android:id="@+id/edittext_search"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/grid_13x"
+        android:background="@android:color/transparent"
+        android:imeOptions="actionDone"
+        android:inputType="text|textAutoCorrect"
+        android:minHeight="@dimen/grid_10x"
+        android:paddingBottom="@dimen/grid_2x"
+        android:paddingEnd="@dimen/grid_5x"
+        android:paddingStart="@dimen/grid_5x"
+        android:textCursorDrawable="@color/colorPrimary"
+        android:textSize="@dimen/font_15" />
+
+    <Button
+        android:layout_width="@dimen/grid_7x"
+        android:layout_height="@dimen/grid_7x" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
